--- a/Задание 5.3.vcxproj.filters
+++ b/Задание 5.3.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="Reservoir.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Functions.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Reservoir.h">
